--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
         name='viewport'
     />
     <title>Hyper WLight Drifter</title>
-    <link href='../assets/web/logo.png' rel='icon' type='image/png'>
+    <link href='assets/web/logo.png' rel='icon' type='image/png'>
     <link
-        href='../scss/index.css'
+        href='scss/index.css'
         rel='stylesheet'
     />
 </head>
 <body id='scroll-body'>
-<img alt='' class='cursor' id='cursor' src='../assets/web/cursor/cursor_normal.png'>
-<img alt='' class='background-color one' src='../assets/web/background/color.png'>
-<img alt='' class='background-color two' src='../assets/web/background/color.png'>
-<img alt='' class='background-color three' src='../assets/web/background/color.png'>
-<img alt='' class='background-color four' src='../assets/web/background/color.png'>
-<img alt='' class='background-color five' src='../assets/web/background/color.png'>
-<img alt='' class='background-color six' src='../assets/web/background/color.png'>
-<img alt='' class='background-color seven' src='../assets/web/background/color.png'>
-<img alt='' class='background-color eight' src='../assets/web/background/color.png'>
-<img alt='' class='background-color nine' src='../assets/web/background/color.png'>
+<img alt='' class='cursor' id='cursor' src='assets/web/cursor/cursor_normal.png'>
+<img alt='' class='background-color one' src='assets/web/background/color.png'>
+<img alt='' class='background-color two' src='assets/web/background/color.png'>
+<img alt='' class='background-color three' src='assets/web/background/color.png'>
+<img alt='' class='background-color four' src='assets/web/background/color.png'>
+<img alt='' class='background-color five' src='assets/web/background/color.png'>
+<img alt='' class='background-color six' src='assets/web/background/color.png'>
+<img alt='' class='background-color seven' src='assets/web/background/color.png'>
+<img alt='' class='background-color eight' src='assets/web/background/color.png'>
+<img alt='' class='background-color nine' src='assets/web/background/color.png'>
 <div class='modal-container' id='how-to-play-modal'>
     <div class='modal-inner-container modal-inner-first'>
         <div class='modal-content-image'>
-            <img alt='' class='modal-image' src='../assets/web/modal/modal_background.png'>
+            <img alt='' class='modal-image' src='assets/web/modal/modal_background.png'>
         </div>
         <div class='modal-content'>
             <div class='modal-left'>
@@ -45,7 +45,7 @@
                         >
                     </div>
                 </header>
-                <img alt='' src='../assets/web/modal/input_image.png'>
+                <img alt='' src='assets/web/modal/input_image.png'>
                 <button class='clickable modal-close-button pointer'>
                     Close
                 </button>
@@ -78,7 +78,7 @@
     </div>
     <div class='modal-inner-container modal-inner-second hidden'>
         <div class='modal-content-image'>
-            <img alt='' class='modal-image' src='../assets/web/modal/modal_background.png'>
+            <img alt='' class='modal-image' src='assets/web/modal/modal_background.png'>
         </div>
         <div class='modal-content'>
             <div class='modal-left'>
@@ -95,7 +95,7 @@
                         >
                     </div>
                 </header>
-                <img alt='' src='../assets/web/modal/input_image.png'>
+                <img alt='' src='assets/web/modal/input_image.png'>
                 <button class='clickable modal-close-button pointer'>
                     Close
                 </button>
@@ -165,7 +165,7 @@
 <section class='navbar section' id='navbar'>
     <div class='navbar-container'>
         <div class='navbar-container-left'>
-            <img alt='' src='../assets/web/jumbotron/title.png'>
+            <img alt='' src='assets/web/jumbotron/title.png'>
             <button>
                 <a class='pointer' href='index.html'>
                     HOME
@@ -188,14 +188,14 @@
 </section>
 <section class='video-container section'>
     <div class='jumbotron-holder'>
-        <img alt='' id='jumbotron-image-back' src='../assets/web/jumbotron/image_back.png'>
-        <img alt='' id='jumbotron-image-middle' src='../assets/web/jumbotron/image_middle.png'>
-        <img alt='' id='jumbotron-image-front' src='../assets/web/jumbotron/image_front.png'>
+        <img alt='' id='jumbotron-image-back' src='assets/web/jumbotron/image_back.png'>
+        <img alt='' id='jumbotron-image-middle' src='assets/web/jumbotron/image_middle.png'>
+        <img alt='' id='jumbotron-image-front' src='assets/web/jumbotron/image_front.png'>
     </div>
     <div class='video-cover'>
     </div>
     <div class='video-text'>
-        <img alt='' src='../assets/web/jumbotron/title.png'>
+        <img alt='' src='assets/web/jumbotron/title.png'>
         <!--        <a class='try-demo-button' href='game.html'>TRY DEMO</a>-->
     </div>
 </section>
@@ -218,7 +218,7 @@
     </div>
     <div class='horizontal-news-container'>
         <div class='news-container pointer'>
-            <img alt='' src='../assets/web/news/news_1.png'>
+            <img alt='' src='assets/web/news/news_1.png'>
             <div class='news-content'>
                 <div class='header'>
                     <p>
@@ -245,7 +245,7 @@
             </div>
         </div>
         <div class='news-container pointer'>
-            <img alt='' src='../assets/web/news/news_2.png'>
+            <img alt='' src='assets/web/news/news_2.png'>
             <div class='news-content'>
                 <div class='header'>
                     <p>
@@ -268,7 +268,7 @@
             </div>
         </div>
         <div class='news-container pointer'>
-            <img alt='' src='../assets/web/news/news_3.png'>
+            <img alt='' src='assets/web/news/news_3.png'>
             <div class='news-content'>
                 <div class='header'>
                     <p>
@@ -319,7 +319,7 @@
         </div>
     </div>
     <div class='score-content'>
-        <img alt='' src='../assets/web/score/score.png'>
+        <img alt='' src='assets/web/score/score.png'>
     </div>
     <div class='score-content'>
         <div class='score-container'>
@@ -348,8 +348,8 @@
     <div class='inner-container'>
         <div class='images-container'>
             <div class='image-box-first'>
-                <img alt='' src='../assets/web/about/gif_1.gif'>
-                <img alt='' src='../assets/web/about/gif_2.gif'>
+                <img alt='' src='assets/web/about/gif_1.gif'>
+                <img alt='' src='assets/web/about/gif_2.gif'>
             </div>
         </div>
         <div class='about-content'>
@@ -391,14 +391,14 @@
         </div>
         <div class='images-container'>
             <div class='image-box'>
-                <img alt='' class='drifter-attack-image' src='../assets/web/about/gif_3.gif'>
+                <img alt='' class='drifter-attack-image' src='assets/web/about/gif_3.gif'>
             </div>
         </div>
     </div>
     <div class='inner-container'>
         <div class='images-container'>
             <div class='image-box'>
-                <img alt='' src='../assets/web/about/gif_4.gif'>
+                <img alt='' src='assets/web/about/gif_4.gif'>
             </div>
         </div>
         <div class='about-content'>
@@ -452,7 +452,7 @@
         <div class='content active'>
             <div class='image-carousel'>
                 <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                    <img alt='' src='assets/web/carousel/carousel_1.png'>
                     <div class='arrow arrow-left pointer'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
@@ -470,16 +470,16 @@
                 </div>
                 <div class='image-list'>
                     <div class='image-list-box bordered first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                        <img alt='' src='assets/web/carousel/carousel_1.png'>
                     </div>
                     <div class='image-list-box second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                        <img alt='' src='assets/web/carousel/carousel_2.png'>
                     </div>
                     <div class='image-list-box third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                        <img alt='' src='assets/web/carousel/carousel_3.png'>
                     </div>
                     <div class='image-list-box fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
+                        <img alt='' src='assets/web/carousel/carousel_4.png'>
                     </div>
                 </div>
             </div>
@@ -520,7 +520,7 @@
         <div class='content'>
             <div class='image-carousel'>
                 <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                    <img alt='' src='assets/web/carousel/carousel_2.png'>
                     <div class='arrow arrow-left pointer'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
@@ -538,16 +538,16 @@
                 </div>
                 <div class='image-list'>
                     <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                        <img alt='' src='assets/web/carousel/carousel_1.png'>
                     </div>
                     <div class='image-list-box bordered second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                        <img alt='' src='assets/web/carousel/carousel_2.png'>
                     </div>
                     <div class='image-list-box third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                        <img alt='' src='assets/web/carousel/carousel_3.png'>
                     </div>
                     <div class='image-list-box fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
+                        <img alt='' src='assets/web/carousel/carousel_4.png'>
                     </div>
                 </div>
             </div>
@@ -589,7 +589,7 @@
         <div class='content'>
             <div class='image-carousel'>
                 <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                    <img alt='' src='assets/web/carousel/carousel_3.png'>
                     <div class='arrow arrow-left pointer'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
@@ -607,16 +607,16 @@
                 </div>
                 <div class='image-list'>
                     <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                        <img alt='' src='assets/web/carousel/carousel_1.png'>
                     </div>
                     <div class='image-list-box second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                        <img alt='' src='assets/web/carousel/carousel_2.png'>
                     </div>
                     <div class='image-list-box bordered third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                        <img alt='' src='assets/web/carousel/carousel_3.png'>
                     </div>
                     <div class='image-list-box fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
+                        <img alt='' src='assets/web/carousel/carousel_4.png'>
                     </div>
                 </div>
             </div>
@@ -657,7 +657,7 @@
         <div class='content'>
             <div class='image-carousel'>
                 <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_4.png'>
+                    <img alt='' src='assets/web/carousel/carousel_4.png'>
                     <div class='arrow arrow-left pointer'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
@@ -675,16 +675,16 @@
                 </div>
                 <div class='image-list'>
                     <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                        <img alt='' src='assets/web/carousel/carousel_1.png'>
                     </div>
                     <div class='image-list-box second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                        <img alt='' src='assets/web/carousel/carousel_2.png'>
                     </div>
                     <div class='image-list-box third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                        <img alt='' src='assets/web/carousel/carousel_3.png'>
                     </div>
                     <div class='image-list-box bordered fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
+                        <img alt='' src='assets/web/carousel/carousel_4.png'>
                     </div>
                 </div>
             </div>
@@ -727,8 +727,8 @@
 </section>
 <section class='map-container'>
     <div class='image-container'>
-        <img alt='Color' class='map-top' src='../assets/web/world/map_upground.png' />
-        <img alt='B/W' class='map-bottom' src='../assets/web/world/map_underground.png' />
+        <img alt='Color' class='map-top' src='assets/web/world/map_upground.png' />
+        <img alt='B/W' class='map-bottom' src='assets/web/world/map_underground.png' />
         <input class='image-range pointer' max='100' min='0'
                oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)"
                step='0.001' type='range'
@@ -738,45 +738,45 @@
                 <h3>
                     The Sentinels
                 </h3>
-                <img alt='' src='../assets/web/world/boss_south.png'>
+                <img alt='' src='assets/web/world/boss_south.png'>
             </div>
-            <img alt='' class='skull' src='../assets/web/world/boss_skull.png'>
+            <img alt='' class='skull' src='assets/web/world/boss_skull.png'>
         </div>
         <div class='boss-marker second'>
             <div class='boss-image second'>
                 <h3>
                     The Hierophant
                 </h3>
-                <img alt='' src='../assets/web/world/boss_north.png'>
+                <img alt='' src='assets/web/world/boss_north.png'>
             </div>
-            <img alt='' class='skull' src='../assets/web/world/boss_skull.png'>
+            <img alt='' class='skull' src='assets/web/world/boss_skull.png'>
         </div>
         <div class='boss-marker third'>
             <div class='boss-image third'>
                 <h3>
                     The Emperor
                 </h3>
-                <img alt='' src='../assets/web/world/boss_east.png'>
+                <img alt='' src='assets/web/world/boss_east.png'>
             </div>
-            <img alt='' class='skull' src='../assets/web/world/boss_skull.png'>
+            <img alt='' class='skull' src='assets/web/world/boss_skull.png'>
         </div>
         <div class='boss-marker fourth'>
             <div class='boss-image fourth'>
                 <h3>
                     The Hanged Man
                 </h3>
-                <img alt='' src='../assets/web/world/boss_west.png'>
+                <img alt='' src='assets/web/world/boss_west.png'>
             </div>
-            <img alt='' class='skull' src='../assets/web/world/boss_skull.png'>
+            <img alt='' class='skull' src='assets/web/world/boss_skull.png'>
         </div>
         <div class='boss-marker fifth'>
             <div class='boss-image fifth'>
                 <h3>
                     Judgement
                 </h3>
-                <img alt='' src='../assets/web/world/boss_center.png'>
+                <img alt='' src='assets/web/world/boss_center.png'>
             </div>
-            <img alt='' class='skull' src='../assets/web/world/boss_skull.png'>
+            <img alt='' class='skull' src='assets/web/world/boss_skull.png'>
         </div>
     </div>
 </section>
@@ -788,7 +788,7 @@
         <div class='ost-content'>
             <div class='content-left'>
                 <canvas id='audio-progress'></canvas>
-                <img alt='' src='../assets/web/ost/ost.png'>
+                <img alt='' src='assets/web/ost/ost.png'>
             </div>
             <div class='content-right'>
                 <div class='content-audio-visualizer'>
@@ -821,7 +821,7 @@
                         </div>
                     </div>
                     <div class='right-content'>
-                        <a class='download-button pointer' download='ost.mp3' href='../assets/web/ost/audio.mp3'>
+                        <a class='download-button pointer' download='ost.mp3' href='assets/web/ost/audio.mp3'>
                             <svg fill='none' height='32' viewBox='0 0 24 24' width='32'
                                  xmlns='http://www.w3.org/2000/svg'>
                                 <path
@@ -842,7 +842,7 @@
 <section class='footer-container-box'>
 </section>
 <section class='footer section'>
-    <img alt='' src='../assets/web/footer/footer.png'>
+    <img alt='' src='assets/web/footer/footer.png'>
     <div class='footer-container'>
         <div class='footer-header'>
             <div class='icons pointer'>
@@ -879,7 +879,7 @@
     integrity='sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM='
     src='https://code.jquery.com/jquery-3.7.0.js'
 ></script>
-<script src='../js/web/modal.js' type='module'></script>
-<script src='../js/web/web.js' type='module'></script>
+<script src='js/web/modal.js' type='module'></script>
+<script src='js/web/web.js' type='module'></script>
 </body>
 </html>
