--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>Hyper WLight Drifter</title>
 </head>
 <body>
-    <script>
-        window.location.href = './html'
-    </script>
+<script>
+    window.location.href = './html';
+</script>
 </body>
 </html>
