feat: added vite to optimize asset loading

--- a/html/game.html
+++ b/html/game.html
@@ -22,16 +22,14 @@
         <div class='modal-content'>
             <div class='modal-left'>
                 <header>
-                    <div
-                        class='clickable arrow-left-modal arrow-left pointer'
-                    >
-                        <
+                    <div class='clickable arrow-left-modal arrow-left pointer'>
+                        &lt;
                     </div>
                     <span> How To Play </span>
                     <div
                         class='clickable arrow-right-modal arrow-right pointer'
                     >
-                        >
+                        &gt;
                     </div>
                 </header>
                 <img alt='' src='../assets/web/modal/input_image.png'>
@@ -75,13 +73,13 @@
                     <div
                         class='clickable arrow-left-modal arrow-left pointer'
                     >
-                        <
+                        &lt;
                     </div>
                     <span> &nbsp;Controls&nbsp; </span>
                     <div
                         class='clickable arrow-right-modal arrow-right pointer'
                     >
-                        >
+                        &gt;
                     </div>
                 </header>
                 <img alt='' src='../assets/web/modal/input_image.png'>
@@ -206,13 +204,13 @@
         >
             <div class='title'>Select Outfit</div>
             <main class='image-container'>
-                <div class='clickable arrow-left' id='image-arrow-left'><</div>
+                <div class='clickable arrow-left' id='image-arrow-left'>&lt;</div>
                 <img
                     alt=''
                     id='player-preview'
                     src='../assets/ui/player_select/player-red.png'
                 />
-                <div class='clickable arrow-right' id='image-arrow-right'>></div>
+                <div class='clickable arrow-right' id='image-arrow-right'>&gt;</div>
             </main>
             <div
                 class='button hoverable'
@@ -261,7 +259,7 @@
                                         class='clickable arrow-left'
                                         id='volume-down'
                                     >
-                                        <
+                                        &lt;
                                     </div>
                                     <div class='volume-meter on'></div>
                                     <div class='volume-meter off'></div>
@@ -277,7 +275,7 @@
                                         class='clickable arrow-right'
                                         id='volume-up'
                                     >
-                                        >
+                                        &gt;
                                     </div>
                                 </span>
                     </div>
@@ -289,14 +287,14 @@
                             class='clickable arrow-left'
                             id='fps-counter-toggle-left'
                         >
-                            <
+                            &lt;
                         </div>
                         <span id='fps-counter-text'> Off </span>
                         <div
                             class='clickable arrow-right'
                             id='fps-counter-toggle-right'
                         >
-                            >
+                            &gt;
                         </div>
                     </div>
                 </div>
