--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-    window.location.href = './html';
+    window.location.href = './html/index.html';
 </script>
 </body>
 </html>
